feat: add navigation bar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,8 @@
 {
-  "ADMIN_NAV": "Admin",
+  "NAVBAR": {
+    "READ": "Read",
+    "SEARCH": "Search",
+    "ADMIN": "Admin"
+  },
   "SELECT_FILE_BTN": "Select file"
 }
