feat: add year property to Work and WorkMetadata

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
     "TITLE": "Title",
     "ABBREV": "Abbreviation",
     "VOLUME": "Volume",
+    "YEAR": "Year",
     "TOOLTIP": "Fill out all fields to upload the text",
     "SELECT_FILE": "Select text file",
     "START_UPLOAD": "Start upload"
