--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,8 @@
   "UPLOAD": {
     "TITLE": "Title",
     "ABBREV": "Abbreviation",
-    "VOLUME": "Volume",
+    "VOLUME": "Volume Number",
+    "ORDINAL": "Position in Volume",
     "YEAR": "Year",
     "TOOLTIP": "Fill out all fields to upload the text",
     "SELECT_FILE": "Select text file",
