fix: fix display of result count

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
   "SEARCH": {
     "INPUT_PLACEHOLDER": "Search terms",
     "BUTTON_LABEL": "Search",
-    "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search"
+    "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search",
+    "RESULTS_COUNT": "Number of search results"
   }
 }
