--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,10 @@
     "INPUT_PLACEHOLDER": "Search terms",
     "BUTTON_LABEL": "Search",
     "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search",
-    "RESULTS_COUNT": "Number of search results"
+    "RESULTS": {
+      "COUNT": "Number of search results",
+      "PAGE": "Page",
+      "PAGES": "Pages"
+    }
   }
 }
