--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,9 +19,9 @@
     "BUTTON_LABEL": "Search",
     "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search",
     "RESULTS": {
+      "NONE_FOUND": "No results found for search terms [{{ searchTerms }}]",
       "COUNT": "Number of search results",
-      "PAGE": "Page",
-      "PAGES": "Pages"
+      "PAGES": "[{{ pages }}]"
     }
   }
 }
