feat: add section to works trees

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,5 +23,12 @@
       "COUNT": "Number of search results",
       "PAGES": "[{{ pages }}]"
     }
+  },
+  "WORKS": {
+    "SECTIONS": {
+      "WORKS": "Section 1: Works",
+      "LETTERS": "Section 2: Letters",
+      "MANUSCRIPTS": "Section 3: Manuscripts"
+    }
   }
 }
