--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,7 +23,7 @@
       "COUNT": "Number of search results",
       "PAGES": "[{{ pages }}]",
       "GO_TO_TEXT_LABEL": "Full text",
-      "GO_TO_TEXT_TOOLTIP": "Go to paragraph in full text"
+      "GO_TO_TEXT_TOOLTIP": "Jump to the paragraph in the full text"
     }
   },
   "WORKS": {
