--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
     "BUTTON_LABEL": "Search",
     "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search",
     "RESULTS": {
-      "NONE_FOUND": "No results found for search terms [{{ searchTerms }}]",
+      "NONE_FOUND": "No results found",
       "COUNT": "Number of search results",
       "PAGES": "[{{ pages }}]",
       "GO_TO_TEXT_LABEL": "Full text",
