--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,9 +15,17 @@
     "START_UPLOAD": "Start upload"
   },
   "SEARCH": {
-    "INPUT_PLACEHOLDER": "Search terms",
-    "BUTTON_LABEL": "Search",
-    "BUTTON_TOOLTIP": "You must enter at least one search term and one work to search",
+    "INPUT": {
+      "SEARCH_TERMS_PLACEHOLDER": "Search terms",
+      "EXCLUDED_TERMS_PLACEHOLDER": "Excluded terms",
+      "SEARCH_SCOPE_LABEL": "Search scope",
+      "SCOPE": {
+        "PARAGRAPH": "Paragraph",
+        "SENTENCE": "Sentence"
+      },
+      "BUTTON_LABEL": "Search",
+      "BUTTON_TOOLTIP": "You must enter at least one search term and select at least one work"
+    },
     "RESULTS": {
       "NONE_FOUND": "No results found",
       "COUNT": "Number of search results",
