feat: improve results page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
     },
     "RESULTS": {
       "NONE_FOUND": "No results found",
-      "COUNT": "Number of search results",
+      "MATCHES": "Matches",
       "PAGES": "[{{ pages }}]",
       "GO_TO_TEXT_LABEL": "Full text",
       "GO_TO_TEXT_TOOLTIP": "Jump to the paragraph in the full text"
