feat: add accept button so works selection menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
       "SIMPLE_INPUT_HEADER": "Search input",
       "SELECT_WORKS_ALL": "Select all",
       "SELECT_WORKS_NOTHING": "Remove all",
+      "ACCEPT": "Accept",
       "SEARCH_STRING_LABEL": "Search terms",
       "SEARCH_STRING_PLACEHOLDER": "Search terms",
       "ADVANCED_OPTIONS_HEADER": "Advanced options",
