--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,10 +15,9 @@
       "SELECT_WORKS_NOTHING": "Remove all",
       "ACCEPT": "Accept",
       "SEARCH_STRING_LABEL": "Search terms",
+      "SEARCH_STRING_INFO": "Use special characters for advanced searches: & for AND, | for OR, ! for NOT, (...) to group terms, and \"...\" for exact phrases. Example: !cat & (dog | \"white mice\")",
       "SEARCH_STRING_PLACEHOLDER": "Search terms",
       "ADVANCED_INPUT": "Advanced input",
-      "OPERATOR_EXPLANATION": "You can use & as AND, | as OR, ! as NOT operators, and parentheses to group terms. For example, '(cat | mouse) & !dog' will find matches that contain either 'cat' or 'mouse', but not 'dog'.",
-      "PHRASE_EXPLANATION": "You can also use double quotes to search for a phrase, e.g. '\"good cat\"' will find matches that contain the word 'good' followed by the word 'cat'. You can use phrases in combination with the operators above.",
       "ADVANCED_OPTIONS_HEADER": "Advanced options",
       "SCOPE_LABEL": "Search scope",
       "SCOPE_INFO": "Search scope: 'Paragraph' will consider your search criteria within the entire paragraph, while 'Sentence' will narrow the criteria to individual sentences.",
