feat: add anchor link button to search results

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,7 @@
 {
   "COMMON": {
-    "SCROLL_TOP_TOOLTIP": "Nach oben"
+    "SCROLL_TOP_TOOLTIP": "Nach oben",
+    "ANCHOR_BUTTON_TOOLTIP": "Erstelle Link zu diesem Element"
   },
   "NAVBAR": {
     "READ": "Lesen",
