feat: add startpage content

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -15,6 +15,9 @@
       "EN": "English"
     }
   },
+  "STARTPAGE": {
+    "TEXT": "Diese Website wird eine Webanwendung zum Durchsuchen der Texte des Bonner Kant-Korpus bieten. Sie befindet sich derzeit in der Entwicklung."
+  },
   "READ": {
     "MODE_CHECKBOX_LABEL": "Zeilennummern anzeigen"
   },
