fix: add commas to KrV translations

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -149,9 +149,9 @@
     "VVRM": "Von den verschiedenen Racen der Menschen",
     "AP": "Aufsätze, das Philanthropin betreffend",
 
-    "KRV_B": "Kritik der reinen Vernunft 2. Aufl.",
+    "KRV_B": "Kritik der reinen Vernunft, 2. Aufl.",
 
-    "KRV_A": "Kritik der reinen Vernunft 1. Aufl.",
+    "KRV_A": "Kritik der reinen Vernunft, 1. Aufl.",
     "PROL": "Prolegomena",
     "GMS": "Grundlegung zur Metaphysik der Sitten",
     "MAN": "Metaphysische Anfangsgründe der Naturwissenschaft",
